--- a/test-output/xtentReport.html
+++ b/test-output/xtentReport.html
@@ -52,7 +52,7 @@
 		<!-- nav-right -->
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<a href='#!'>
-			<span class='label blue darken-3 suite-start-time'>Oct 2, 2020 03:28:54 PM</span>
+			<span class='label blue darken-3 suite-start-time'>Oct 2, 2020 09:49:40 PM</span>
 			</a>
 		</ul>
 	</div>
@@ -67,7 +67,7 @@
 				<i class='material-icons'>warning</i> Status
 				</a>
 				<ul id='tests-toggle' class='dropdown-content'>
-										<li status='fail'><a href='#!'>Fail <i class='material-icons red-text'>cancel</i></a></li>
+										<li status='pass'><a href='#!'>Pass <i class='material-icons green-text'>check_circle</i></a></li>
 					<li class='divider'></li>
 					<li status='clear' clear='true'><a href='#!'>Clear Filters <i class='material-icons'>clear</i></a></li>
 				</ul>
@@ -110,10 +110,10 @@
                     <canvas id='parent-analysis' width='90' height='70'></canvas>
                 </div>
                 <div class='block text-small'>
-                    <span class='tooltipped' data-position='top' data-tooltip='0%'><span class='strong'>0</span> test(s) passed</span>
+                    <span class='tooltipped' data-position='top' data-tooltip='100%'><span class='strong'>1</span> test(s) passed</span>
                 </div>
                 <div class='block text-small'>
-                    <span class='strong tooltipped' data-position='top' data-tooltip='100%'>1</span> test(s) failed, <span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> skipped
+                    <span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> test(s) failed, <span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> skipped
                 </div>
             </div>
         </div>
@@ -131,17 +131,17 @@
 </div>	<div class='subview-left left'>
 		<div class='view-summary'>
 			<ul id='test-collection' class='test-collection'>
-				<li class='test displayed active  fail' status='fail' bdd='false' test-id='1'>
+				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
 						<span class='test-name'>verifyPageTitle</span>
-						<span class='test-time'>Oct 2, 2020 03:28:55 PM</span>
-						<span class='test-status right fail'>fail</span>
+						<span class='test-time'>Oct 2, 2020 09:49:40 PM</span>
+						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Oct 2, 2020 03:28:55 PM</span>
-	<span class='label end-time'>Oct 2, 2020 03:28:56 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 1s+347ms</span>
+	<span class='label start-time'>Oct 2, 2020 09:49:40 PM</span>
+	<span class='label end-time'>Oct 2, 2020 09:49:40 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+19ms</span>
 </div>
 <div class='test-steps'>
 	<table class='bordered table-results'>
@@ -153,28 +153,12 @@
 			</tr>
 		</thead>
 		<tbody>
-			<tr class='log' status='fail'>
-				<td class='status fail' title='fail' alt='fail'><i class='material-icons'>cancel</i></td>
-				<td class='timestamp'>3:28:55 PM</td>
+			<tr class='log' status='pass'>
+				<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
+				<td class='timestamp'>9:49:40 PM</td>
 				<td class='step-details'>
-						<span class='badge white-text red'>verifyPageTitle - Test Case Failed</span>
+						<span class='badge white-text green'>verifyPageTitle Test Case PASSED</span>
 					
-				</td>
-			</tr>
-			<tr class='log' status='fail'>
-				<td class='status fail' title='fail' alt='fail'><i class='material-icons'>cancel</i></td>
-				<td class='timestamp'>3:28:55 PM</td>
-				<td class='step-details'>
-						<span class='badge white-text red'>java.lang.AssertionError: expected [Welcome to OSINTM] but found [Welcome to OSINTMon] - Test Case Failed</span>
-					
-				</td>
-			</tr>
-			<tr class='log' status='fail'>
-				<td class='status fail' title='fail' alt='fail'><i class='material-icons'>cancel</i></td>
-				<td class='timestamp'>3:28:56 PM</td>
-				<td class='step-details'>
-						expected [Welcome to OSINTM] but found [Welcome to OSINTMon]
-					<img class='r-img' onerror='this.style.display="none"' data-featherlight='D:\Selenium\Selenium-OsintMon\OsintMon/Screenshots/verifyPageTitle20201002032855.png' src='D:\Selenium\Selenium-OsintMon\OsintMon/Screenshots/verifyPageTitle20201002032855.png'>
 				</td>
 			</tr>
 		</tbody>
@@ -222,19 +206,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Oct 2, 2020 03:28:54 PM</div>
+					<div class='panel-lead'>Oct 2, 2020 09:49:40 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Oct 2, 2020 03:28:56 PM</div>
+			 		<div class='panel-lead'>Oct 2, 2020 09:49:40 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>0h 0m 1s+701ms</div>
+					<div class='panel-lead'>0h 0m 0s+219ms</div>
 				</div>
 			</div>
 			<div class='col s4'>
@@ -278,13 +262,13 @@
 		<script>
 			var statusGroup = {
                 parentCount: 1,
-				passParent: 0,
-				failParent: 1,
+				passParent: 1,
+				failParent: 0,
 				fatalParent: 0,
 				errorParent: 0,
 				warningParent: 0,
 				skipParent: 0,
-				exceptionsParent: 1,
+				exceptionsParent: 0,
 				childCount: 0,
 				passChild: 0,
 				failChild: 0,
@@ -309,7 +293,7 @@
 		</script>
 		<script>
 			var timeline = {
-			        "verifyPageTitle":1.347
+			        "verifyPageTitle":0.019
 			};
 		</script>
 	
