--- a/test-output/old/OsintMon Suite/methods.html
+++ b/test-output/old/OsintMon Suite/methods.html
@@ -1,24 +1,42 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>OsintMon Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e269a8">  <td>20/10/03 23:36:03</td>   <td>0</td> <td title="&gt;&gt;Constaints.SetUrl()[pri:0, instance:invalidTestCases.InvalidLogin@65e2dbf3]">&gt;&gt;SetUrl</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1663166483</td>   <td></td> </tr>
-<tr bgcolor="caeb9e">  <td>20/10/03 23:36:21</td>   <td>17983</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyTitle.verifyPageTitle()[pri:0, instance:osintMonTestCases.VerifyTitle@52a86356]">verifyPageTitle</td> 
-  <td>main@1663166483</td>   <td></td> </tr>
-<tr bgcolor="e269a8">  <td>20/10/03 23:36:21</td>   <td>18004</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Constaints.getResult(org.testng.ITestResult)[pri:0, instance:osintMonTestCases.VerifyTitle@52a86356]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@1663166483</td>   <td></td> </tr>
-<tr bgcolor="e269a8">  <td>20/10/03 23:36:21</td>   <td>18013</td> <td>&nbsp;</td><td title="&lt;&lt;Constaints.endReport()[pri:0, instance:osintMonTestCases.VerifyTitle@52a86356]">&lt;&lt;endReport</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1663166483</td>   <td></td> </tr>
-<tr bgcolor="907bac">  <td>20/10/03 23:36:22</td>   <td>18464</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvalidLogin.NoCredentials()[pri:1, instance:invalidTestCases.InvalidLogin@65e2dbf3]">NoCredentials</td> 
-  <td>main@1663166483</td>   <td></td> </tr>
-<tr bgcolor="e269a8">  <td>20/10/03 23:36:38</td>   <td>34727</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Constaints.getResult(org.testng.ITestResult)[pri:0, instance:invalidTestCases.InvalidLogin@65e2dbf3]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@1663166483</td>   <td></td> </tr>
-<tr bgcolor="907bac">  <td>20/10/03 23:36:38</td>   <td>34735</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvalidLogin.InvalidCredentials()[pri:2, instance:invalidTestCases.InvalidLogin@65e2dbf3]">InvalidCredentials</td> 
-  <td>main@1663166483</td>   <td></td> </tr>
-<tr bgcolor="e269a8">  <td>20/10/03 23:36:42</td>   <td>39039</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Constaints.getResult(org.testng.ITestResult)[pri:0, instance:invalidTestCases.InvalidLogin@65e2dbf3]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@1663166483</td>   <td></td> </tr>
-<tr bgcolor="e269a8">  <td>20/10/03 23:36:42</td>   <td>39039</td> <td>&nbsp;</td><td title="&lt;&lt;Constaints.endReport()[pri:0, instance:invalidTestCases.InvalidLogin@65e2dbf3]">&lt;&lt;endReport</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1663166483</td>   <td></td> </tr>
-<tr bgcolor="e269a8">  <td>20/10/03 23:36:42</td>   <td>39082</td> <td title="&lt;&lt;Constaints.tearDown()[pri:0, instance:invalidTestCases.InvalidLogin@65e2dbf3]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1663166483</td>   <td></td> </tr>
+<tr bgcolor="ebbee5">  <td>20/10/04 23:34:00</td>   <td>0</td> <td title="&gt;&gt;Constaints.SetUrl()[pri:0, instance:validTestcases.ValidLogin@31304f14]">&gt;&gt;SetUrl</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1636506029</td>   <td></td> </tr>
+<tr bgcolor="706975">  <td>20/10/04 23:34:33</td>   <td>32535</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyTitle.verifyPageTitle()[pri:0, instance:osintMonTestCases.VerifyTitle@79e2c065]">verifyPageTitle</td> 
+  <td>main@1636506029</td>   <td></td> </tr>
+<tr bgcolor="ebbee5">  <td>20/10/04 23:34:33</td>   <td>32587</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Constaints.getResult(org.testng.ITestResult)[pri:0, instance:osintMonTestCases.VerifyTitle@79e2c065]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1636506029</td>   <td></td> </tr>
+<tr bgcolor="ebbee5">  <td>20/10/04 23:34:33</td>   <td>32604</td> <td>&nbsp;</td><td title="&lt;&lt;Constaints.endReport()[pri:0, instance:osintMonTestCases.VerifyTitle@79e2c065]">&lt;&lt;endReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1636506029</td>   <td></td> </tr>
+<tr bgcolor="a48688">  <td>20/10/04 23:34:34</td>   <td>33903</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvalidLogin.NoCredentials()[pri:1, instance:invalidTestCases.InvalidLogin@3349e9bb]">NoCredentials</td> 
+  <td>main@1636506029</td>   <td></td> </tr>
+<tr bgcolor="ebbee5">  <td>20/10/04 23:35:40</td>   <td>100255</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Constaints.getResult(org.testng.ITestResult)[pri:0, instance:invalidTestCases.InvalidLogin@3349e9bb]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1636506029</td>   <td></td> </tr>
+<tr bgcolor="a48688">  <td>20/10/04 23:35:50</td>   <td>109911</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvalidLogin.InvalidCredentials()[pri:2, instance:invalidTestCases.InvalidLogin@3349e9bb]">InvalidCredentials</td> 
+  <td>main@1636506029</td>   <td></td> </tr>
+<tr bgcolor="ebbee5">  <td>20/10/04 23:35:55</td>   <td>114679</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Constaints.getResult(org.testng.ITestResult)[pri:0, instance:invalidTestCases.InvalidLogin@3349e9bb]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1636506029</td>   <td></td> </tr>
+<tr bgcolor="ebbee5">  <td>20/10/04 23:35:55</td>   <td>114680</td> <td>&nbsp;</td><td title="&lt;&lt;Constaints.endReport()[pri:0, instance:invalidTestCases.InvalidLogin@3349e9bb]">&lt;&lt;endReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1636506029</td>   <td></td> </tr>
+<tr bgcolor="d079a3">  <td>20/10/04 23:35:55</td>   <td>114759</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidLogin.validCredentials(java.lang.String, java.lang.String, java.lang.String)[pri:3, instance:validTestcases.ValidLogin@31304f14]">validCredentials</td> 
+  <td>main@1636506029</td>   <td></td> </tr>
+<tr bgcolor="ebbee5">  <td>20/10/04 23:36:24</td>   <td>143897</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Constaints.getResult(org.testng.ITestResult)[pri:0, instance:validTestcases.ValidLogin@31304f14]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1636506029</td>   <td></td> </tr>
+<tr bgcolor="d079a3">  <td>20/10/04 23:36:25</td>   <td>144884</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidLogin.viewMonitor()[pri:4, instance:validTestcases.ValidLogin@31304f14]">viewMonitor</td> 
+  <td>main@1636506029</td>   <td></td> </tr>
+<tr bgcolor="ebbee5">  <td>20/10/04 23:36:27</td>   <td>146828</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Constaints.getResult(org.testng.ITestResult)[pri:0, instance:validTestcases.ValidLogin@31304f14]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1636506029</td>   <td></td> </tr>
+<tr bgcolor="d079a3">  <td>20/10/04 23:36:27</td>   <td>146829</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidLogin.dropdownSelection()[pri:5, instance:validTestcases.ValidLogin@31304f14]">dropdownSelection</td> 
+  <td>main@1636506029</td>   <td></td> </tr>
+<tr bgcolor="ebbee5">  <td>20/10/04 23:37:13</td>   <td>193171</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Constaints.getResult(org.testng.ITestResult)[pri:0, instance:validTestcases.ValidLogin@31304f14]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1636506029</td>   <td></td> </tr>
+<tr bgcolor="d079a3">  <td>20/10/04 23:37:13</td>   <td>193171</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ValidLogin.logOut()[pri:6, instance:validTestcases.ValidLogin@31304f14]">logOut</td> 
+  <td>main@1636506029</td>   <td></td> </tr>
+<tr bgcolor="ebbee5">  <td>20/10/04 23:37:15</td>   <td>194601</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Constaints.getResult(org.testng.ITestResult)[pri:0, instance:validTestcases.ValidLogin@31304f14]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1636506029</td>   <td></td> </tr>
+<tr bgcolor="ebbee5">  <td>20/10/04 23:37:15</td>   <td>194601</td> <td>&nbsp;</td><td title="&lt;&lt;Constaints.endReport()[pri:0, instance:validTestcases.ValidLogin@31304f14]">&lt;&lt;endReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1636506029</td>   <td></td> </tr>
+<tr bgcolor="ebbee5">  <td>20/10/04 23:37:15</td>   <td>194674</td> <td title="&lt;&lt;Constaints.tearDown()[pri:0, instance:validTestcases.ValidLogin@31304f14]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1636506029</td>   <td></td> </tr>
 </table>
