--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,16 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="baeedf">  <td>20/10/03 00:37:42</td>   <td>0</td> <td title="&gt;&gt;Constaints.SetUrl()[pri:0, instance:invalidTestCases.InvalidLogin@78c03f1f]">&gt;&gt;SetUrl</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1427810650</td>   <td></td> </tr>
-<tr bgcolor="a3ffec">  <td>20/10/03 00:37:56</td>   <td>14622</td> <td>&nbsp;</td><td title="&gt;&gt;InvalidLogin.Login()[pri:0, instance:invalidTestCases.InvalidLogin@78c03f1f]">&gt;&gt;Login</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1427810650</td>   <td></td> </tr>
-<tr bgcolor="a3ffec">  <td>20/10/03 00:37:57</td>   <td>14762</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="InvalidLogin.NoCredentials()[pri:1, instance:invalidTestCases.InvalidLogin@78c03f1f]">NoCredentials</td> 
-  <td>main@1427810650</td>   <td></td> </tr>
-<tr bgcolor="baeedf">  <td>20/10/03 00:38:05</td>   <td>22741</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Constaints.getResult(org.testng.ITestResult)[pri:0, instance:invalidTestCases.InvalidLogin@78c03f1f]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@1427810650</td>   <td></td> </tr>
-<tr bgcolor="baeedf">  <td>20/10/03 00:38:05</td>   <td>23360</td> <td>&nbsp;</td><td title="&lt;&lt;Constaints.endReport()[pri:0, instance:invalidTestCases.InvalidLogin@78c03f1f]">&lt;&lt;endReport</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1427810650</td>   <td></td> </tr>
-<tr bgcolor="baeedf">  <td>20/10/03 00:38:06</td>   <td>23887</td> <td title="&lt;&lt;Constaints.tearDown()[pri:0, instance:invalidTestCases.InvalidLogin@78c03f1f]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1427810650</td>   <td></td> </tr>
+<tr bgcolor="b08ed1">  <td>20/10/04 22:19:24</td>   <td>0</td> <td title="&gt;&gt;Constaints.SetUrl()[pri:0, instance:osintMonTestCases.VerifyTitle@72d1ad2e]">&gt;&gt;SetUrl</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2088445230</td>   <td></td> </tr>
+<tr bgcolor="6b85f9">  <td>20/10/04 22:19:52</td>   <td>27676</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyTitle.verifyPageTitle()[pri:0, instance:osintMonTestCases.VerifyTitle@72d1ad2e]">verifyPageTitle</td> 
+  <td>main@2088445230</td>   <td></td> </tr>
+<tr bgcolor="b08ed1">  <td>20/10/04 22:19:52</td>   <td>27697</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Constaints.getResult(org.testng.ITestResult)[pri:0, instance:osintMonTestCases.VerifyTitle@72d1ad2e]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@2088445230</td>   <td></td> </tr>
+<tr bgcolor="b08ed1">  <td>20/10/04 22:19:52</td>   <td>27704</td> <td>&nbsp;</td><td title="&lt;&lt;Constaints.endReport()[pri:0, instance:osintMonTestCases.VerifyTitle@72d1ad2e]">&lt;&lt;endReport</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2088445230</td>   <td></td> </tr>
+<tr bgcolor="b08ed1">  <td>20/10/04 22:19:52</td>   <td>28207</td> <td title="&lt;&lt;Constaints.tearDown()[pri:0, instance:osintMonTestCases.VerifyTitle@72d1ad2e]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2088445230</td>   <td></td> </tr>
 </table>
